--- a/WebAppGraphAPI/Web.config
+++ b/WebAppGraphAPI/Web.config
@@ -9,11 +9,15 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!-- Modify these values-->
     <add key="ida:ClientId" value="c7106273-7c25-48e8-954e-cf207b5eb3c9" />
     <add key="ida:AppKey" value="wDckc8ebbawALFLeRvvxdG7zGf6N36T/JPm02oOkZsI=" />
-    <add key="ida:AADInstance" value="https://login.windows.net/{0}" />
     <add key="ida:Tenant" value="graphDir1.onMicrosoft.com" />
     <add key="ida:TenantId" value="4fd2b2f2-ea27-4fe5-a8f3-7b1a7c975f34" />
+    <!-- Modify these values-->
+    
+    <add key="ida:AADInstance" value="https://login.windows.net/{0}" />
     <add key="ida:PostLogoutRedirectUri" value="http://localhost:44322/" />
     <add key="ida:GraphApiVersion" value="2013-11-08" />
     <add key="ida:GraphUrl" value="https://graph.windows.net" />
